[metadata]
name = skt
description = "Sonic Kernel Testing"
long_description = file: README.md
version = 1
author = Red Hat, Inc.
license = GPLv2+

[options]
# Automatically find all files beneath the skt directory and include them.
packages = find:
# Parse the MANIFEST.in file and include those files, too.
include_package_data = True
# Let pip install dependencies automatically.
install_requires = beaker-client
                   flake8
                   junit_xml
                   mock
                   pycodestyle
                   pylint
                   requests

[options.entry_points]
# Set up an executable 'skt' that calls the main() function in
# skt/executable.py.
console_scripts =
    skt = skt.executable:main

[options.packages.find]
# Don't include the /tests directory when we search for python files.
exclude =
    tests
