[metadata]
name = skt
description = "Sonic Kernel Testing"
long_description = file: README.md
version = 1
author = Red Hat, Inc.
license = GPLv2+

[options]
# Automatically find all files beneath the skt directory and include them.
packages = find:
# Parse the MANIFEST.in file and include those files, too.
include_package_data = True
# Let pip install dependencies automatically.
install_requires = jinja2>=2.10
                   defusedxml
                   redis
                   requests
                   PyYAML
                   enum34

# The beaker-client package breaks some Python packaging rules and tries to
# store content in the system /etc directory. This causes a Sandbox violation
# in Circle-CI.
[options.extras_require]
beaker = beaker-client
         python-krbV
dev = pylint
      flake8
      mock
      responses

[options.entry_points]
# Set up an executable 'skt' that calls the main() function in
# skt/executable.py.
console_scripts =
    skt = skt.executable:main

[options.packages.find]
# Don't include the /tests directory when we search for python files.
exclude =
    tests
